fixed name display overflow

--- a/style.css
+++ b/style.css
@@ -419,7 +419,7 @@
     .messages-card h1{
       align-self: center;
     }
-    .name-display{
+    .big-card4 .name-display{
       overflow: scroll;
     }
     .big-card5{
